Finish add label widget for all relevant plots
https://github.com/joey711/shiny-phyloseq/issues/43

--- a/panels/paneldoc/richness.html
+++ b/panels/paneldoc/richness.html
@@ -68,6 +68,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>Color</strong> - The variable selected here is mapped to the color shade of points. Take care that selected discrete variables do not surpass the number of available aesthetic categories (e.g. more categories in data than you have color shades).</li>
 <li><strong>Shape</strong> - The variable selected here is mapped to point shape. Use the same care as for <code>Color</code>, but note that there are only 6 different shapes.</li>
 <li><strong>Alpha Measures</strong> - Select one or more alpha-diversity measures. They will be plotted as separate panels side-by-side.</li>
+<li><strong>Label</strong> - A variable to map to point label. The text at each point will reflect the value of the chosen variable. The small numeric widgets to the right adjust label size (<code>Lab Sz</code>) and vertical justification (<code>V-Just</code>).</li>
 </ul>
 </div>
 <div id="details" class="section level3">
