Added doc for Transform option, Transform Panel
https://github.com/joey711/shiny-phyloseq/issues/10

--- a/panels/paneldoc/d3Network.html
+++ b/panels/paneldoc/d3Network.html
@@ -67,6 +67,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>Type</strong> - Toggle between a network with Samples or Taxa as nodes.</li>
 <li><strong>Distance</strong> - The distance method. This is a direct interface to phyloseq’s <a href="http://joey711.github.io/phyloseq/distance">distance function</a>.</li>
 <li><strong>Max D</strong> - Maximum Distance. The graphic includes an edge if two nodes have a smaller distance than this value. This is exactly the same as the <code>Max D</code> variable in the static Network panel.</li>
+<li><strong>Transform</strong> - This option is very important. It determines whether to use filtered-counts, or some transformation of the filtered count values. See the <code>Transform</code> panel for the definition of each available option.</li>
 </ul>
 </div>
 <div id="aesthetic-mapping" class="section level3">
