--- a/panels/paneldoc/heatmap.html
+++ b/panels/paneldoc/heatmap.html
@@ -63,7 +63,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <ul>
 <li><strong>Method</strong> - The Ordination Method to use. This is an interface to phyloseq’s <a href="http://joey711.github.io/phyloseq/ordinate">ordinate function</a>.</li>
 <li><strong>Distance</strong> - The distance method. This is a direct interface to phyloseq’s <a href="http://joey711.github.io/phyloseq/distance">distance function</a>.</li>
-<li><strong>Count Type</strong> - This determines what form of count data is used in both the ordination and in the color-scale transformation shown in the graphic.</li>
+<li><strong>Transform</strong> - This option is very important. It determines whether to use filtered-counts, or some transformation of the filtered count values in both the ordination and in the color-scale transformation shown in the graphic. See the <code>Transform</code> panel for the definition of each available option.</li>
 </ul>
 </div>
 <div id="labels" class="section level3">
