--- a/panels/paneldoc/scatter.html
+++ b/panels/paneldoc/scatter.html
@@ -68,7 +68,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li><strong>Facet Row</strong> - This is an interface to <a href="http://docs.ggplot2.org/0.9.3.1/facet_grid.html">ggplot2’s facet_grid function</a>. Faceting is a means of splitting the data into separate panels according to one or more variables in the data. This can have many advantages, especially to alleviate overplotting, and to clarify key comparisons. In this case, the <code>Facet Row</code> widget provides available variables that will be mapped to panel-rows in the resulting grid of facets panels. You can select more than one variable. You should delete/unselect NULL when selecting facets.</li>
 <li><strong>Facet Col</strong> - This is the same as <code>Facet Row</code> above, but this widget controls the variables that will arrange the data into panel columns.</li>
 <li><strong>Label</strong> - A variable to map to point label. The text at each point will reflect the value of the chosen variable. The small numeric widgets to the right adjust label size (<code>Lab Sz</code>) and vertical justification (<code>V-Just</code>).</li>
-<li><strong>Data</strong> - Whether to use filtered <code>Counts</code> or a transformation. <code>Proportion</code> is a simple, provided transformation.</li>
+<li><strong>Transform</strong> - This option is very important. It determines whether to use filtered-counts, or some transformation of the filtered count values. See the <code>Transform</code> panel for the definition of each available option.</li>
 </ul>
 </div>
 <div id="details" class="section level3">
