Ordination UI improve, add X, Y doc

--- a/panels/paneldoc/ordination.html
+++ b/panels/paneldoc/ordination.html
@@ -74,6 +74,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div id="aesthetic-mapping" class="section level3">
 <h3>Aesthetic Mapping</h3>
 <ul>
+<li><strong>X, Y</strong> - Select the ordination axes to map to the <code>X</code> (horizontal) and <code>Y</code> (vertical) axes. Default is first and second ordination axes, respectively.</li>
 <li><strong>Color</strong> - The variable selected here is mapped to point color.</li>
 <li><strong>Shape</strong> - The variable selected here is mapped to point shape.</li>
 <li><strong>Facet Row</strong> - This is an interface to <a href="http://docs.ggplot2.org/0.9.3.1/facet_grid.html">ggplot2’s facet_grid function</a>. Faceting is a means of splitting the data into separate panels according to one or more variables in the data. This can have many advantages, especially to alleviate overplotting, and to clarify key comparisons. In this case, the <code>Facet Row</code> widget provides available variables that will be mapped to panel-rows in the resulting grid of facets panels. You can select more than one variable. You should delete/unselect NULL when selecting facets.</li>
