Update citation on front page

--- a/index.html
+++ b/index.html
@@ -49,15 +49,21 @@ All we require is that you cite/attribute the following
 in any work that benefits from this code or application.</p>
 
 <h3>
-<a name="the-web-application" class="anchor" href="#the-web-application"><span class="octicon octicon-link"></span></a>The Web Application</h3>
+<a name="the-web-application" class="anchor"
+      href="#the-web-application"><span class="octicon
+      octicon-link"></span></a>Citing the Web Application</h3>
 
-<p>McMurdie and Holmes (2014) Shiny-phyloseq: Web Application for Interactive Microbiome Analysis with Provenance Tracking. <em>Submitted</em>.</p>
+<p>McMurdie and Holmes (2014) Shiny-phyloseq: Web Application for
+      Interactive Microbiome Analysis with Provenance Tracking. <strong>Bioinformatics</strong>
+      <em>in press</em>.</p>
 
 <h3>
-<a name="the-r-package-underneath-the-hood" class="anchor" href="#the-r-package-underneath-the-hood"><span class="octicon octicon-link"></span></a>The R package "underneath the hood"</h3>
+<a name="the-r-package-underneath-the-hood" class="anchor"
+      href="#the-r-package-underneath-the-hood"><span class="octicon
+      octicon-link"></span></a>Citing the R package "underneath the hood"</h3>
 
 <p>McMurdie and Holmes (2013) <a href="http://dx.plos.org/10.1371/journal.pone.0061217">phyloseq: An R package for reproducible interactive analysis and graphics of microbiome census data</a>. 
-PLoS ONE 8(4):e61217.</p>
+<strong>PLoS ONE</strong> 8(4):e61217.</p>
 
 <div id="auto-install-shiny-phyloseq" class="section level2">
 <h2>Launch/Install Shiny-phyloseq</h2>
